--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "TSBuild" : "npx tsc",
+    "TSBuild": "npx tsc",
     "dev": "nodemon ./dist/main.js"
   },
   "repository": {
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/Mathieu-Berthet/AlpsDrive-TS#readme",
   "dependencies": {
-
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.16.1",
     "typescript": "^5.0.4"
   }
