--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/Mathieu-Berthet/AlpsDrive-TS#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-busboy": "^9.0.0",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-busboy": "^8.0.0",
     "@types/node": "^18.16.1",
     "typescript": "^5.0.4"
   }
